--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="head-brown"> NOTATNIK WTF</h1>
         </header>
         <section>
-            <h2 id="notatki">Notatki z WTF:Luźne myśli</h2>
+            <h2 id="notatki">Notatki z WTF</h2>
             <p>Tu znajdują się rózne informacje które będą wymagały segragacji</p>
             <article>
                 <h3 class="yellow-h">Teks jest troszkę przypadkowy</h3>
