--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
         <header>
             <h1 class="head-brown"> NOTATNIK WTF</h1>
         </header>
