zmiana belki manu

--- a/html.html
+++ b/html.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Strona Główna</a>
-            <a href="css.html">CSS</a>
-            <a href="znaczniki.html">znaczniki</a>
+            <a class="navigation" href="index.html">Strona Główna</a>
+            <a class="navigation" href="css.html">CSS</a>
+            <a class="navigation" href="znaczniki.html">znaczniki</a>
         </nav>
     </header>
 
