--- a/index.html
+++ b/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <a href="css.html">css</a>
-            <a href="html.html">html</a>
-            <a href="znaczniki.html">znaczniki</a>
-        </nav>
+      <nav class="navigation">
+        <a class="navigation__link" href="css.html">Css</a>
+        <a class="navigation__link" href="html.html">Html</a>
+        <a class="navigation__link" href="znaczniki.html">Znaczniki</a>
+      </nav>
     </header>
 
     <main class="main">
-        <header>
-            <h1 class="head-brown"> NOTATNIK WTF</h1>
-        </header>
-        <section>
-            <h2 id="notatki">Notatki z WTF:Podpinam pod github nadrabiam zaległości</h2>
-            <p>Tu znajdują się rózne informacje które będą wymagały segragacji</p>
-            <article>
-                <h3 class="yellow-h">Teks jest troszkę przypadkowy</h3>
-                <p> Podstawowe informacje ,budujące ogólny zarys<br /> materiału którym będziemy się zajmować.
-                    <a href="#notatki">Notatki</a> to początek mojej strony.<br />
-                    "Nav"-Znaczniki słuzy do przemieszczania sie między stronami.W naszej pracy domowej jest to element
-                    powtarzalny dlatego umieszczamy go w "header" i poza znacznikiem "main" poniewarz ten element bedzie
-                    sie nam powtarzał na kilku stronach podobnie jak"footer"który tez umieszczamy poza main</p>
-            </article>
-        </section>
+      <header>
+        <h1 class="head-brown">NOTATNIK WTF</h1>
+      </header>
+      <section>
+        <h2 id="notatki">
+          Notatki z WTF:Podpinam pod github nadrabiam zaległości
+        </h2>
+        <p>Tu znajdują się rózne informacje które będą wymagały segragacji</p>
+        <article>
+          <h3 class="yellow-h">Teks jest troszkę przypadkowy</h3>
+          <p>
+            Podstawowe informacje ,budujące ogólny zarys<br />
+            materiału którym będziemy się zajmować.
+            <a href="#notatki">Notatki</a> to początek mojej strony.<br />
+            "Nav"-Znaczniki słuzy do przemieszczania sie między stronami.W
+            naszej pracy domowej jest to element powtarzalny dlatego umieszczamy
+            go w "header" i poza znacznikiem "main" poniewarz ten element bedzie
+            sie nam powtarzał na kilku stronach podobnie jak"footer"który tez
+            umieszczamy poza main
+          </p>
+        </article>
+      </section>
     </main>
     <footer>
-        <img src="footer.jpg" alt="to jest stopka strony" />
+      <img src="footer.jpg" alt="to jest stopka strony" />
     </footer>
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
