zmiana naglowka za pomoca js

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <nav class="navigation">
         <a class="navigation__link" href="css.html">Css</a>
         <a class="navigation__link" href="html.html">Html</a>
-        <a class="navigation__link" href="znaczniki.html">Znaczniki</a>
+        <a class="navigation__link navigation__link--maker" href="znaczniki.html">Znaczniki</a>
       </nav>
     </header>
 
     <main class="main">
       <header>
-        <h1 class="head-brown">NOTATNIK WTF</h1>
+        <h1 class="head-brown head__brown--js">NOTATNIK WTF</h1>
       </header>
       <section>
         <h2 id="notatki">
@@ -40,8 +40,8 @@
         </article>
       </section>
     </main>
-    <footer>
-      <img src="footer.jpg" alt="to jest stopka strony" />
+    <footer class="footer">
+      <p>Stopka strony</p>
     </footer>
     <script src="main.js"></script>
   </body>
