--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Podstawowe informacje ,budujące ogólny zarys<br />
             materiału którym będziemy się zajmować.
             <a href="#notatki">Notatki</a> to początek mojej strony.<br />
-            "Nav"-Znaczniki słuzy do przemieszczania sie między stronami.W
+            "Nav"-Znaczniki słuzy do przemieszczania stronami.W
             naszej pracy domowej jest to element powtarzalny dlatego umieszczamy
             go w "header" i poza znacznikiem "main" poniewarz ten element bedzie
             sie nam powtarzał na kilku stronach podobnie jak"footer"który tez
