--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       <nav class="navigation">
         <a class="navigation__link" href="css.html">Css</a>
         <a class="navigation__link" href="html.html">Html</a>
-        <a class="navigation__link navigation__link--maker" href="znaczniki.html">Znaczniki</a>
+        <a
+          class="navigation__link navigation__link--maker"
+          href="znaczniki.html"
+          >Znaczniki</a
+        >
       </nav>
     </header>
 
@@ -21,20 +25,20 @@
         <h1 class="head-brown head__brown--js">NOTATNIK WTF</h1>
       </header>
       <section>
-        <h2 id="notatki">
-          Notatki z WTF:Podpinam pod github nadrabiam zaległości
+        <h2 >
+          Zbiór wiadomosci ze szkolenia WTF
         </h2>
-        <p>Tu znajdują się rózne informacje które będą wymagały segragacji</p>
+        <p id="notatki">Tu znajdują się rózne informacje które będą wymagały segragacji</p>
         <article>
           <h3 class="yellow-h">Teks jest troszkę przypadkowy</h3>
           <p>
             Podstawowe informacje ,budujące ogólny zarys<br />
             materiału którym będziemy się zajmować.
             <a href="#notatki">Notatki</a> to początek mojej strony.<br />
-            "Nav"-Znaczniki słuzy do przemieszczania stronami.W
-            naszej pracy domowej jest to element powtarzalny dlatego umieszczamy
-            go w "header" i poza znacznikiem "main" poniewarz ten element bedzie
-            sie nam powtarzał na kilku stronach podobnie jak"footer"który tez
+            "Nav"-Znaczniki słuzy do przemieszczania stronami.W naszej pracy
+            domowej jest to element powtarzalny dlatego umieszczamy go w
+            "header" i poza znacznikiem "main" poniewarz ten element bedzie sie
+            nam powtarzał na kilku stronach podobnie jak"footer"który tez
             umieszczamy poza main
           </p>
         </article>
