--- a/znaczniki.html
+++ b/znaczniki.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <a href="index.html">Strona Główna</a>
-            <a href="css.html">css</a>
-            <a href="html.html">html</a>
-        </nav>
+      <nav>
+        <a href="index.html">Strona Główna</a>
+        <a href="css.html">css</a>
+        <a href="html.html">html</a>
+      </nav>
     </header>
 
     <main>
-        <header>
-            <h1> Znaczniki</h1>
-        </header>
-        <section>
-            <h2>Lista znaczników z opisem</h2>
-            <p>
-                &ltmain&gt
-                &ltsection&gt
-                &ltarticle&gt
-                &ltheader&gt
-                &ltfooter&gt
-                &lth1-h6&gt
-                &ltp&gt
-                &ltbr&gt
-
-            </p>
-
-        </section>
-        <footer>
-            To jest stopka strony:)
-        </footer>
+      <header>
+        <h1>Znaczniki</h1>
+      </header>
+      <section>
+        <h2>Lista znaczników z opisem</h2>
+        <p>
+          &ltmain&gt &ltsection&gt &ltarticle&gt &ltheader&gt &ltfooter&gt
+          &lth1-h6&gt &ltp&gt &ltbr&gt
+        </p>
+      </section>
+      <footer>
+        To jest stopka strony:)
+      </footer>
     </main>
-</body>
-
+  </body>
+</html>
