--- a/index.html
+++ b/index.html
@@ -24,25 +24,29 @@
       <header>
         <h1 class="head-brown head__brown--js">NOTATNIK WTF</h1>
       </header>
-      <section>
-        <h2 >
-          Zbiór wiadomosci ze szkolenia WTF
-        </h2>
-        <p id="notatki">Tu znajdują się rózne informacje które będą wymagały segragacji</p>
-        <article>
-          <h3 class="yellow-h">Teks jest troszkę przypadkowy</h3>
-          <p>
-            Podstawowe informacje ,budujące ogólny zarys<br />
-            materiału którym będziemy się zajmować.
-            <a href="#notatki">Notatki</a> to początek mojej strony.<br />
-            "Nav"-Znaczniki słuzy do przemieszczania stronami.W naszej pracy
-            domowej jest to element powtarzalny dlatego umieszczamy go w
-            "header" i poza znacznikiem "main" poniewarz ten element bedzie sie
-            nam powtarzał na kilku stronach podobnie jak"footer"który tez
-            umieszczamy poza main
+      <div class="box">
+        <section>
+          <h2>
+            Zbiór wiadomosci ze szkolenia WTF
+          </h2>
+          <p id="notatki">
+            Tu znajdują się rózne informacje które będą wymagały segragacji
           </p>
-        </article>
-      </section>
+          <article>
+            <h3 class="yellow-h">Teks jest troszkę przypadkowy</h3>
+            <p>
+              Podstawowe informacje ,budujące ogólny zarys<br />
+              materiału którym będziemy się zajmować.
+              <a href="#notatki">Notatki</a> to początek mojej strony.<br />
+              "Nav"-Znaczniki słuzy do przemieszczania stronami.W naszej pracy
+              domowej jest to element powtarzalny dlatego umieszczamy go w
+              "header" i poza znacznikiem "main" poniewarz ten element bedzie
+              sie nam powtarzał na kilku stronach podobnie jak"footer"który tez
+              umieszczamy poza main
+            </p>
+          </article>
+        </section>
+      </div>
     </main>
     <footer class="footer">
       <p>Stopka strony</p>
