--- a/index.html
+++ b/index.html
@@ -20,33 +20,61 @@
       </nav>
     </header>
 
-    <main class="main">
+    <main>
       <header>
         <h1 class="head-brown head__brown--js">NOTATNIK WTF</h1>
       </header>
 
+      <img class="box_img" src="image.jpg" alt="logo" />
+
       <div class="box">
-        <section>
-          <h2>
-            Zbiór wiadomosci ze szkolenia WTF
-          </h2>
-          <p id="notatki">
-            Tu znajdują się rózne informacje które będą wymagały segragacji
-          </p>
-          <article>
-            <h3 class="yellow-h">Teks jest troszkę przypadkowy</h3>
-            <p>
-              Podstawowe informacje ,budujące ogólny zarys<br />
-              materiału którym będziemy się zajmować.
-              <a href="#notatki">Notatki</a> to początek mojej strony.<br />
-              "Nav"-Znaczniki słuzy do przemieszczania stronami.W naszej pracy
-              domowej jest to element powtarzalny dlatego umieszczamy go w
-              "header" i poza znacznikiem "main" poniewarz ten element bedzie
-              sie nam powtarzał na kilku stronach podobnie jak"footer"który tez
-              umieszczamy poza main
-            </p>
-          </article>
-        </section>
+        <nav >
+          <div class="box_second"> <a href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Github.html">Github</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
+          
+
+          
+          </div>
+        </nav>
       </div>
       <div class="box">
         <section>
@@ -54,13 +82,12 @@
             Zbiór wiadomosci ze szkolenia WTF
           </h2>
           <p id="notatki">
-            Tu znajdują się rózne informacje które będą wymagały segragacji
+            Notatnik:)
           </p>
           <article>
-            <h3 class="yellow-h">Teks jest troszkę przypadkowy</h3>
+            <h3 class="yellow-h">Znajdują sie tu treśći które chce poznać</h3>
             <p>
-              Podstawowe informacje ,budujące ogólny zarys<br />
-              materiału którym będziemy się zajmować.
+             <b>Do czego słiuży NAV.</b>
               <a href="#notatki">Notatki</a> to początek mojej strony.<br />
               "Nav"-Znaczniki słuzy do przemieszczania stronami.W naszej pracy
               domowej jest to element powtarzalny dlatego umieszczamy go w
