--- a/html.html
+++ b/html.html
@@ -17,35 +17,40 @@
     </header>
 
     <main>
-      <header>
-        <h1>NOTATNIK WTF</h1>
-      </header>
-      <section id="znaczniki">
-        <h2>Zaczynamy</h2>
-        <article>
-          <h2>II Tydzień</h2>
-          <img src="znacznik.jpg" alt="znacznik" />
-          <img src="br.jpg" alt="br" />
-          <p>
-            Znacznik <strong>"br"</strong> ma za zadanie podział tekstu.<br />Nie
-            stosujemy go do robienia przerw w teksie.
-          </p>
-          <img src="b.jpg" alt="b" />
-          <p>
-            Znacznik <strong>"b=strong,i=em"</strong>Znacznik "b"pogrubia tekst
-            natomiast znaznik"strong"pogrubia teks oraz zaznacza ze tekst jest
-            ważny(dla przegladarki).Znacznik "i"sprawia ze tekst jest pisany
-            kursywą a znacznik "em"mówi nam ze tekst moze mieć znaczenie
-            ironiczne(przegladarka moze go tak interpretować).
-          </p>
-          <img src="id.jpg" alt="id" />
-          <p>
-            Oznaczenie elementu znacznikiem <strong>"id"</strong>pozwala nam na
-            szybkie przejście w miejsce gdzie sie ten element znajduje.Nawigacja
-            wewnątrz dokumentu
-          </p>
-        </article>
-      </section>
+     <div class="box">
+       asdjasd
+     </div>
+     <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+      <img class="box_img" src="image.jpg" alt="logo" />
+    </div> <div class="box">
+      asdjasd
+      <img class="box_img" src="image.jpg" alt="logo" />
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div> <div class="box">
+      asdjasd
+    </div>
     </main>
     <footer>
       To jest stopka strony:)
