--- a/Github.html
+++ b/Github.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <header>
-        <nav class="navigation">
-          <a class="navigation__link" href="index.html">Strona Główna</a>
-        </nav>
-      </header>
+      <nav class="navigation">
+        <a class="navigation__link" href="index.html">Strona Główna</a>
+      </nav>
+    </header>
 
     <head>
       <section>
-        <h1>Git!-Polecenia</h1>
+        <h1>Github!-Polecenia</h1>
         <article>
           <p>
             Git pozwala nam na zapisywanie i cofanie zmina wprowadzonych w
