--- a/index.html
+++ b/index.html
@@ -1,107 +1,93 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <header>
+    <nav class="navigation">
+      <a class="navigation__link" href="css.html">Css</a>
+      <a class="navigation__link" href="html.html">Html</a>
+      <a class="navigation__link navigation__link--maker" href="znaczniki.html">Znaczniki</a>
+    </nav>
+  </header>
+
+  <main>
     <header>
-      <nav class="navigation">
-        <a class="navigation__link" href="css.html">Css</a>
-        <a class="navigation__link" href="html.html">Html</a>
-        <a
-          class="navigation__link navigation__link--maker"
-          href="znaczniki.html"
-          >Znaczniki</a
-        >
-      </nav>
+      <h1 class="head-brown head__brown--js">NOTATNIK WTF</h1>
     </header>
 
-    <main>
-      <header>
-        <h1 class="head-brown head__brown--js">NOTATNIK WTF</h1>
-      </header>
+    <img class="box_img" src="image.jpg" alt="logo" />
 
-      <img class="box_img" src="image.jpg" alt="logo" />
-
-      <div class="box">
-        <nav >
-          <div class="box_second"> <a href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Github.html">Github</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          <div class="box_second"> <a class=""href="Git.html">Git</a></div>
-          
-
-          
-          </div>
-        </nav>
-      </div>
-      <div class="box">
-        <section>
-          <h2>
-            Zbiór wiadomosci ze szkolenia WTF
-          </h2>
-          <p id="notatki">
-            Notatnik:)
+    <div class="box">
+      <nav>
+        <div class="box_second"> <a href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Github.html">Github</a></div>
+        <div class="box_second"> <a class="" href="box.html">Zycie w pudełku</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+        <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+      </nav>
+    </div>
+    <div class="box">
+      <section>
+        <h2>
+          Zbiór wiadomosci ze szkolenia WTF
+        </h2>
+        <p id="notatki">
+          Notatnik:)
+        </p>
+        <article>
+          <h3 class="yellow-h">Znajdują sie tu treśći które chce poznać</h3>
+          <p>
+            <b>Do czego słiuży NAV.</b>
+            <a href="#notatki">Notatki</a> to początek mojej strony.<br />
+            "Nav"-Znaczniki słuzy do przemieszczania stronami.W naszej pracy
+            domowej jest to element powtarzalny dlatego umieszczamy go w
+            "header" i poza znacznikiem "main" poniewarz ten element bedzie
+            sie nam powtarzał na kilku stronach podobnie jak"footer"który tez
+            umieszczamy poza main
           </p>
-          <article>
-            <h3 class="yellow-h">Znajdują sie tu treśći które chce poznać</h3>
-            <p>
-             <b>Do czego słiuży NAV.</b>
-              <a href="#notatki">Notatki</a> to początek mojej strony.<br />
-              "Nav"-Znaczniki słuzy do przemieszczania stronami.W naszej pracy
-              domowej jest to element powtarzalny dlatego umieszczamy go w
-              "header" i poza znacznikiem "main" poniewarz ten element bedzie
-              sie nam powtarzał na kilku stronach podobnie jak"footer"który tez
-              umieszczamy poza main
-            </p>
-          </article>
-        </section>
-      </div>
-    </main>
-    <footer class="footer">
-      <p>Stopka strony</p>
-    </footer>
-    <script src="main.js"></script>
-  </body>
+        </article>
+      </section>
+    </div>
+  </main>
+  <footer class="footer">
+    <p>Stopka strony</p>
+  </footer>
+  <script src="main.js"></script>
+</body>
+
 </html>
