--- a/box.html
+++ b/box.html
@@ -29,14 +29,58 @@
         <section>
           <article>
             <h3>Przykłady ustawiania box-ów</h3>
-            <p class="git_border">Display:inline</p>
-            <div class="display">Display inline</div>
-            <div class="display">Display inline</div>
-            <div class="display">Display inline</div>
-            <div class="display">Display inline</div>
-            <div class="display">Display inline</div>
+            <p class="git_border">Display:block-<b>Domyślna opcja</b></p>
+            <div class="display">Display:block</div>
+            <div class="display">Display:block</div>
+            <div class="display">Display:block</div>
+            <div class="display">Display:block</div>
+            <div class="display">Display:block</div>
+            <div class="display">Display:block</div>
           </article>
         </section>
+        <section>
+          <article>
+            <h3>Przykłady ustawiania box-ów</h3>
+            <p class="git_border">Display:inline</p>
+            <div class="display__inline">Display:inline</div>
+            <div class="display__inline">Display:inline</div>
+            <div class="display__inline">Display:inline</div>
+            <div class="display__inline">Display:inline</div>
+            <div class="display__inline">Display:inline</div>
+            <div class="display__inline">Display:inline</div>
+            <p><b>Dispaly:inline</b> powoduje ze wartośći width i height są ignorowane</br>
+              Elementy za  wszelką cene musza byc obok siebie</p>
+          </article>
+        </section>
+        <section>
+          <article>
+            <h3>Przykłady ustawiania box-ów</h3>
+            <p class="git_border">Display:inline-block</p>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            
+            <p><b>Dispaly:inline</b>sprawia że możemy dodatkowo wprowadzić :<br/><b>width/height oraz max-width/max-height min-width/min-height</b> </p>
+          </article>
+        </section>
+        <section>
+          <article>
+            <h3>Przykłady ustawiania box-ów</h3>
+            <p class="git_border">Overflow</p>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            <div class="display__inline--block">Display:inline-block</div>
+            
+            <p><b>Dispaly:inline</b>sprawia że możemy dodatkowo wprowadzić :<br/><b>width/height oraz max-width/max-height min-width/min-height</b> </p>
+          </article>
+        </section>
+
     </head>
     <main>
 </body>
