--- a/box.html
+++ b/box.html
@@ -49,7 +49,7 @@
             <div class="display__inline">Display:inline</div>
             <div class="display__inline">Display:inline</div>
             <p><b>Dispaly:inline</b> powoduje ze wartośći width i height są ignorowane</br>
-              Elementy za  wszelką cene musza byc obok siebie</p>
+              Elementy za wszelką cene musza byc obok siebie</p>
           </article>
         </section>
         <section>
@@ -62,22 +62,45 @@
             <div class="display__inline--block">Display:inline-block</div>
             <div class="display__inline--block">Display:inline-block</div>
             <div class="display__inline--block">Display:inline-block</div>
-            
-            <p><b>Dispaly:inline</b>sprawia że możemy dodatkowo wprowadzić :<br/><b>width/height oraz max-width/max-height min-width/min-height</b> </p>
+
+            <p><b>Dispaly:inline</b>sprawia że możemy dodatkowo wprowadzić :<br /><b>width/height oraz
+                max-width/max-height min-width/min-height</b> </p>
           </article>
         </section>
         <section>
           <article>
             <h3>Przykłady ustawiania box-ów</h3>
             <p class="git_border">Overflow</p>
-            <div class="display__inline--block">Display:inline-block</div>
-            <div class="display__inline--block">Display:inline-block</div>
-            <div class="display__inline--block">Display:inline-block</div>
-            <div class="display__inline--block">Display:inline-block</div>
-            <div class="display__inline--block">Display:inline-block</div>
-            <div class="display__inline--block">Display:inline-block</div>
-            
-            <p><b>Dispaly:inline</b>sprawia że możemy dodatkowo wprowadzić :<br/><b>width/height oraz max-width/max-height min-width/min-height</b> </p>
+            <div class="overflow">Overflow</div>
+            <div class="overflow">Overflow</div>
+            <div class="overflow__size">UcinaUcinaUcinaUcinaUcinaUcinaUcina</div>
+            <div class="overflow__size">Overflow</div>
+            <div class="overflow__size">Overflow</div>
+            <div class="overflow__size">Overflow</div>
+
+
+            <p><b>overflow:hidden pozwala na </b>wprowadzenie width i height<br /><b>width/height oraz
+                max-width/max-height min-width/min-height.Ucina teks wsrodku DIV-A</b> </p>
+          </article>
+        </section>
+
+        <section>
+          <article>
+            <h3>Przykłady ustawiania box-ów</h3>
+            <p class="git_border">Overflow:hidden,visibel,auto</p>
+            <div class="overflow__size">70x100 hidden
+              <div class="overflow__size--one">70x200 ucietyssssssssssssssssssssssssssssssss</br></div>
+
+            </div>
+           <div class="overflow__size">70x100 visible
+              <div class="overflow__size--two">70x200 ucietysssssssssssssssssssssssssssssssssssssssssss</br></div>
+
+            </div>
+            <div class="overflow__size">70x100 auto
+              <div class="overflow__size--three">70x60 ucietysssssssssssssssssssssssssssssssssssssssssss</br></div>
+
+
+            <p><b</p>
           </article>
         </section>
 
