--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <div class="box_second"> <a class="" href="box.html">Zycie w pudełku</a></div>
                 <div class="box_second"> <a class="" href="jednostki.html">Jednostki</a></div>
                 <div class="box_second"> <a class="" href="position.html">Position</a></div>
+                <div class="box_second">
+                    <a class="" href="linki.html"></a>
+                </div>
                 <div class="box_second"> <a class="" href="Git.html">Git</a></div>
                 <div class="box_second"> <a class="" href="Git.html">Git</a></div>
                 <div class="box_second"> <a class="" href="Git.html">Git</a></div>
@@ -57,8 +60,7 @@
                 <div class="box_second"> <a class="" href="Git.html">Git</a></div>
                 <div class="box_second"> <a class="" href="Git.html">Git</a></div>
                 <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                <div class="box_second"> <a class="" href="linki.html">Linki</a></div>
             </nav>
         </div>
         <div class="box">
@@ -73,9 +75,7 @@
                     <h3 class="yellow-h">Znajdują sie tu treśći które chce poznać</h3>
                     <p>
                         <b>Do czego słiuży NAV.</b>
-                        <a href="#notatki">Notatki</a> to początek mojej strony.<br /> "Nav"-Znaczniki słuzy do przemieszczania stronami.W naszej pracy domowej jest to element powtarzalny dlatego umieszczamy go w "header" i poza znacznikiem "main" poniewarz
-                        ten element bedzie sie nam powtarzał na kilku stronach podobnie jak"footer"który tez umieszczamy poza main
-                    </p>
+                        <a href="#notatki">Notatki</a> to początek mojej strony.<br /> LAYOUT</p>
                 </article>
             </section>
         </div>
