--- a/position.html
+++ b/position.html
@@ -21,74 +21,95 @@
             <section>
                 <h1>Position</h1>
                 <article>
-                    <p class="git_border"><b>Pozyzje na stronie</b></p>
-                    <div class="position">Position
-                        <div class="position__absolute">Absolute:top,</br>right,bottom,left</div>
+                    <p class="git_border"><b>Pozyzje na stronie</br>
+                            Absolute elemety sa pozycjonowane względem tego elementu:top,</br>right,bottom,left
+                        </b></p>
+                    <div class="position">
+                        <div class="position__absolute">Absolute elrmety sa pozycjonowane względem tego eementu:top,
+                            </br>right,bottom,left</div>
                         <div class="position__zindex">Zindex=1000</div>
                         <div class="position__zindextwo">Zindex2=1500</br>Wartośc Zindex definiuje nam który element ma być wyżej</div>
                         <div class="position__fixed">Fixed.Mam stałe miejsce</div>
                         <div class="position__sticky">Sticky</div>
+                    </div>
 
-                </article>
-            </section>
 
-            <section>
-                <h2>Position</h2>
-                <article>
-
-                    <div class="position">Position
-                        <div class="position__absolutetwo">Absolute:top,</br>right,bottom,left</div>
+                    <div class="positiontwo">
 
                         <div class="position__sticky">Sticky</div>
-
+                    </div>
                 </article>
             </section>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
-            <div>scroll</div>
+            <section>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+                scroll</br>
+            </section>
         </header>
 
         <main>
